--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 :root {
   --celeste: rgb(208, 226, 222);
   --gris: #efefefe3;
@@ -15,12 +14,15 @@ body {
   padding-bottom: 2rem;
   display: flex;
 }
-
+#portafolio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .section-title {
   margin-bottom: 1rem;
   font-size: 2.5rem;
 }
-
 
 .tituloservicios {
   text-align: center;
@@ -34,7 +36,7 @@ body {
 
 .disposervicios {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); 
+  grid-template-columns: repeat(3, 1fr);
   gap: 2%;
   padding: 2%;
   text-align: justify;
@@ -60,7 +62,7 @@ body {
 
 .dispofrases {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); 
+  grid-template-columns: repeat(2, 1fr);
   gap: 5%;
   padding: 2%;
   text-align: center;
@@ -77,11 +79,11 @@ body {
 
 .formulario-container {
   background-color: var(--gris);
-  padding: 20px; 
-  border-radius: 8px; 
+  padding: 20px;
+  border-radius: 8px;
 }
 .form-label {
-  text-align: right; 
+  text-align: right;
 }
 
 a {
@@ -111,3 +113,8 @@ a {
   }
 }
 
+@media (min-width: 992px) {
+  .tecnologias-container {
+    max-width: 80% !important;
+  }
+}
